--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,71 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+body{
+    padding: 60px;
+}
+form{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+input{
+    appearance: none;
+    border: 1px solid;
+    margin: 10px 0;
+}
+input[type='text']{
+    border: none;
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 10px 0;
+    width: 100%;
+    text-align: center;
+}
+input[type='submit']{
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.4s;
+}
+input[type='submit']:hover{
+    background-color: rgb(199, 199, 199);
+}
+ol{
+    margin-top: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.error{
+    color:red;
+}
+
+.card{
+    align-content: center;
+    border: 1px solid grey;
+    border-radius: 6px;
+    overflow: hidden;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.card p{
+    padding: 5px;
+    text-align: center;
+}
+.card img{
+    max-height: 170px;
+}
+
+.card-grid{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.nombre-categoria{
+    width: 100%;
+    margin: 20px 0;
+    text-align: center;
 }
